[package]
name = "extra-2-kit"
version = "0.1.0"
edition = "2021"
publish = false
build = "../build.rs"
# Don't rebuild crate just because of changes to README.
exclude = ["README.md"]

# HACK: this should be build-kit but I am cheating
[package.metadata.build-variant]
included-packages = [
    "pkg-c"
]

[lib]
path = "../kit.rs"

[build-dependencies]
core-kit = { path = "../../kits/core-kit" }
pkg-c = { path = "../../packages/pkg-c" }
