[package]
name = "extra-3-kit"
version = "0.1.0"
edition = "2021"
publish = false
build = "../build.rs"
# Don't rebuild crate just because of changes to README.
exclude = ["README.md"]

# HACK: this should be build-kit but I am cheating
[package.metadata.build-variant]
included-packages = [
    "pkg-e"
]

[lib]
path = "../kit.rs"

[build-dependencies]
pkg-e = { path = "../../packages/pkg-e" }
extra-1-kit = { path = "../../kits/extra-1-kit" }
extra-2-kit = { path = "../../kits/extra-2-kit" }
